--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -6,12 +6,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Unlock Secrets
-      uses: sliteteam/github-action-git-crypt-unlock@1.0.2
-      env:
-        GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT }}
-
     - uses: actions/checkout@v2
     - name: Setup Python
       uses: actions/setup-python@v1
@@ -21,7 +15,8 @@ jobs:
       run : |
         python -m pip install --upgrade pip
         pip install pipenv
-        pipenv install --dev
+        pipenv install --dev --system
     - name: Test with pytest
-      run: pipenv run python -m pytest
+      # run: pipenv run python -m pytest
+      run: pytest
         
