--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "My personal utils project (Kouyou - 効用 - Utility)"
 authors = ["Gustavo Reis <guto.reisdelima@gmail.com>"]
 license = "MIT"
-readme = "README.rst"
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -21,6 +21,9 @@ python-dotenv = "^0.11.0"
 pytest = "^5.3.5"
 pylint = "^2.4.4"
 pytest-cov = "^2.8.1"
+sphinx = "^2.4.2"
+sphinx-rtd-theme = "^0.4.3"
+bluepy = "^1.3.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
