--- a/.github/workflows/ci_cd_actions.yml
+++ b/.github/workflows/ci_cd_actions.yml
@@ -10,6 +10,8 @@ jobs:
         - name: Setup .env file
           run: |
             touch .env 
+            python "import os; print(os.getenv('GOOGLE_PROJECT_ID')"
+            
             echo "export GOOGLE_PROJECT_ID="${{ secrets.GOOGLE_PROJECT_ID }}
             echo "export GOOGLE_PRIVATE_KEY_ID="${{ secrets.GOOGLE_PRIVATE_KEY_ID }}
             echo "export GOOGLE_PRIVATE_KEY="${{ secrets.GOOGLE_PRIVATE_KEY }}
