--- a/.github/workflows/ci_cd_actions.yml
+++ b/.github/workflows/ci_cd_actions.yml
@@ -30,5 +30,16 @@ jobs:
             file: ./coverage.xml
             flags: unittest
             fail_ci_if_error: true
+    deploy:
+        name: Deploy
+        runs-on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-python@v1
+        - uses: dschep/install-poetry-action@v1.3
+        - name: Setup Poetry
+          run: poetry install
+        - name: Deploy to PyPI
+          run: poetry publish --build --username ${{ secrets.PYPI_USER }} --password ${{ secrets.PYPI_PASS }}
           
         
