--- a/.github/workflows/ci_cd_actions.yml
+++ b/.github/workflows/ci_cd_actions.yml
@@ -31,6 +31,7 @@ jobs:
             flags: unittest
             fail_ci_if_error: true
     deploy:
+        needs: build_and_test
         name: Deploy
         runs-on: ubuntu-latest
         steps:
